--- a/full-stack-recruitment-test/styles/Header.module.css
+++ b/full-stack-recruitment-test/styles/Header.module.css
@@ -4,6 +4,19 @@
   justify-content: space-between;
   align-items: center;
   background-color: #fff;
+  box-shadow: 0px 1px 3px 0px rgba(37,32,31,.3);
+  width: 100%;
+}
+
+.hiddenText {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  border: 0;
+  overflow: hidden;
+  clip: rect(0 0 0 0);
 }
 
 .logoImage {
