--- a/full-stack-recruitment-test/styles/Home.module.css
+++ b/full-stack-recruitment-test/styles/Home.module.css
@@ -1,10 +1,10 @@
 .container {
   min-height: 100vh;
-  padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  background-color: #f1f2f8;
 }
 
 .main {
